...
    const connecting =
        status?.webRTCStatus === WebRTCStatus.Connecting ||
        status?.signalingServerStatus === SignalingStatus.Connecting;
    const connected = status?.webRTCStatus === WebRTCStatus.Connected;
    return (
        <Button
            testID="device-detail-sync"
            size="default"
            disabled={pending || connecting}
            loading={working || connecting}
            onPress={() => onConnect(device)}
            style={{
                minHeight: 48,
...
